// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migration addColumn 1`] = `
Array [
  Array [
    "ALTER TABLE modelName ADD columnTest string",
    [Function],
  ],
]
`;

exports[`migration createTable 1`] = `
Array [
  Array [
    "CREATE TABLE modelName (column string,second_column boolean)",
    [Function],
  ],
]
`;

exports[`migration markAsRan 1`] = `
Array [
  Array [
    "INSERT INTO migrations (migration) VALUES (?)",
    "migrationId",
    [Function],
  ],
]
`;
